# ROBIN

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: pypi.yml
cmake/: DownloadEigen.cmake  DownloadExternal.cmake  xeniumConfig.cmake
include/robin/: core.hpp  graph.hpp  graph_core.hpp  graph_io.hpp  graph_solvers.hpp  macros.hpp  math.hpp  pkc.hpp  problems.hpp  robin.hpp  utils.hpp  views.hpp
matlab/: CMakeLists.txt  findInlierStructure_mex.cpp  make3dNormalRegInvGraph_mex.cpp  make3dRegInvGraph_mex.cpp  makeRotAvgInvGraph_mex.cpp  makeVecAvgInvGraph_mex.cpp  mex_utils.hpp
matlab/tests/: findInlierStructure_tests.m  makeVecAvgInvGraph_tests.m
python/: CMakeLists.txt  README.md  example.py  pyproject.toml  setup.py.in
python/robin_py/: __init__.py  robin_py.cpp
src/: core.cpp  graph.cpp  graph_core.cpp  graph_io.cpp  graph_solvers.cpp  pkc.cpp  problems.cpp  robin.cpp  utils.cpp
tests/: CMakeLists.txt  benchmarks.cpp  catch.hpp  core_test.cpp  graph_core_test.cpp  graph_solvers_test.cpp  main.cc  math_test.cpp  problems_test.cpp  robin_test.cpp  test_utils.hpp  utils_test.cpp
tests/data/graph_test/: README.md  c-fat500-10.mtx  g1.mtx  g2.mtx  g3.mtx  web-edu.mtx  web-spam.mtx
tests/scripts/: kcore.py
